unpackaged/main/default/objects/Lender_Profile__c/Lender_Profile__c.object-meta.xml
<CustomObject>
    <description>Profiles for lender accounts. Defines criteria for customers to be eligible for a particular offering/product</description>
    <label>Lender Profile</label>
    <nameField>
        <displayFormat>LenderProfile-{000000}</displayFormat>
        <label>Lender Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lender Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>