unpackaged/main/default/objects/Lender_Profile__c/fields/Acceptable_Industries__c.field-meta.xml
<CustomField>
    <fullName>Acceptable_Industries__c</fullName>
    <description>If values are being added to this list, they also need to be added to the Business Industry fields on the Account and Customer Form objects. Standard value set isn't being used because the Industry field is populated by webservice - decoupling the need to add values across front end and salesforce</description>
    <label>Accepted Industries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrative Support</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Arts, Entertainment, and Recreation</fullName>
            </value>
            <value>
                <fullName>Auto Repair</fullName>
            </value>
            <value>
                <fullName>Commercial Trucking</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Educational Services</fullName>
            </value>
            <value>
                <fullName>Finance and Insurance</fullName>
            </value>
            <value>
                <fullName>Healthcare and Social Assistance</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Medical Practice</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Professional, Scientific, and Technical Services</fullName>
            </value>
            <value>
                <fullName>Public Administration</fullName>
            </value>
            <value>
                <fullName>Real Estate and Leasing</fullName>
            </value>
            <value>
                <fullName>Restaurants and Food Services</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Wholesale Trade</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>