unpackaged/main/default/objects/Lender_Profile__c/fields/AGS_Max__c.field-meta.xml
<CustomField>
    <fullName>AGS_Max__c</fullName>
    <label>AGS Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>