unpackaged/main/default/objects/Lender_Profile__c/fields/AGS_Min__c.field-meta.xml
<CustomField>
    <fullName>AGS_Min__c</fullName>
    <label>AGS Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>