unpackaged/main/default/objects/Lender_Profile__c/fields/Auto_Send__c.field-meta.xml
<CustomField>
    <fullName>Auto_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, deal opportunities will be sent to the lender as soon as a customer matches for this lender profile. Leave unchecked if we should wait till CTA click to send</inlineHelpText>
    <label>Auto Send</label>
    <type>Checkbox</type>
</CustomField>