unpackaged/main/default/objects/Lender_Profile__c/fields/DE_version__c.field-meta.xml
<CustomField>
    <fullName>DE_version__c</fullName>
    <label>DE version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>v1</fullName>
            </value>
            <value>
                <fullName>v2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>