unpackaged/main/default/objects/Lender_Profile__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description for users to provide additional context about a lender profile record. Ex would be “Smartbiz - Excellent, 500k+”. This field is not being used for service integrations</description>
    <inlineHelpText>Summary of the Lender Profile configurations for internal users</inlineHelpText>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>