unpackaged/main/default/objects/Lender_Profile__c/fields/Display_Redirect_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Display_Redirect_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>"Speed bump” for front end to determine if a screen message is displayed before redirecting customer to the lender url</description>
    <label>Display Redirect Confirmation</label>
    <type>Checkbox</type>
</CustomField>