unpackaged/main/default/objects/Lender_Profile__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>The date at which a lender profile should no longer be considered for distribution, this field is not required</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>