unpackaged/main/default/objects/Lender_Profile__c/fields/FICO_Max__c.field-meta.xml
<CustomField>
    <fullName>FICO_Max__c</fullName>
    <description>Credit Score Max</description>
    <label>FICO Max</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>