unpackaged/main/default/objects/Lender_Profile__c/fields/FICO_Min__c.field-meta.xml
<CustomField>
    <fullName>FICO_Min__c</fullName>
    <description>Credit Score Min</description>
    <label>FICO Min</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>