unpackaged/main/default/objects/Lender_Profile__c/fields/Hide_CTA_Button__c.field-meta.xml
<CustomField>
    <fullName>Hide_CTA_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the CTA button on this lender card will be hidden</inlineHelpText>
    <label>Hide CTA Button</label>
    <type>Checkbox</type>
</CustomField>