unpackaged/main/default/objects/Lender_Profile__c/fields/Judgements__c.field-meta.xml
<CustomField>
    <fullName>Judgements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Judgements</label>
    <type>Checkbox</type>
</CustomField>