unpackaged/main/default/objects/Lender_Profile__c/fields/Lender_Account__c.field-meta.xml
<CustomField>
    <fullName>Lender_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Lender Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account does not have a Lender record type</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Lender</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lender Profiles</relationshipLabel>
    <relationshipName>Lender_Profiles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>