unpackaged/main/default/objects/Lender_Profile__c/fields/Lender_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Lender_Campaign_ID__c</fullName>
    <description>Unique identifier for a grouping of lender profiles with matching AGS, TIB, and FICO requirements. Initially created so end users can identify lender profiles that correspond to a "campaign" on their master excel sheet</description>
    <externalId>true</externalId>
    <label>Lender Campaign ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>