unpackaged/main/default/objects/Lender_Profile__c/fields/Lender_Card_Annual_Revenue_Min__c.field-meta.xml
<CustomField>
    <fullName>Lender_Card_Annual_Revenue_Min__c</fullName>
    <inlineHelpText>Format this data exactly how you want it to appear on the lender card (Include dollar signs, commas)</inlineHelpText>
    <label>Lender Card Annual Revenue Min</label>
    <length>25</length>
    <type>Text</type>
</CustomField>