unpackaged/main/default/objects/Lender_Profile__c/fields/Lender_Card_Description__c.field-meta.xml
<CustomField>
    <fullName>Lender_Card_Description__c</fullName>
    <label>Lender Card Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>