unpackaged/main/default/objects/Lender_Profile__c/fields/Lender_Card_FICO_Min__c.field-meta.xml
<CustomField>
    <fullName>Lender_Card_FICO_Min__c</fullName>
    <inlineHelpText>Format this data exactly how you want it to appear on the lender card</inlineHelpText>
    <label>Lender Card FICO Min</label>
    <length>25</length>
    <type>Text</type>
</CustomField>