unpackaged/main/default/objects/Lender_Profile__c/fields/Lender_Card_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Lender_Card_Interest_Rate__c</fullName>
    <inlineHelpText>Format this data exactly how you want it to appear on the lender card (Include percentages and surrounding text if desired)</inlineHelpText>
    <label>Lender Card Interest Rate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>