unpackaged/main/default/objects/Lender_Profile__c/fields/Lender_Card_Loan_Amount_Range__c.field-meta.xml
<CustomField>
    <fullName>Lender_Card_Loan_Amount_Range__c</fullName>
    <inlineHelpText>Format this data exactly how you want it to appear on the lender card (Include dollar signs, commas, and dashes)</inlineHelpText>
    <label>Lender Card Loan Amount Range</label>
    <length>50</length>
    <type>Text</type>
</CustomField>