unpackaged/main/default/objects/Lender_Profile__c/fields/Lender_Card_Logo_Mobile_Height__c.field-meta.xml
<CustomField>
    <fullName>Lender_Card_Logo_Mobile_Height__c</fullName>
    <inlineHelpText>In pixels. Applies only to Mobile card logo</inlineHelpText>
    <label>Lender Card Logo Mobile Height</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>