unpackaged/main/default/objects/Lender_Profile__c/fields/Lender_Card_Outer_Heading__c.field-meta.xml
<CustomField>
    <fullName>Lender_Card_Outer_Heading__c</fullName>
    <label>Lender Card Outer Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>