unpackaged/main/default/objects/Lender_Profile__c/fields/Lender_Card_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Lender_Card_Phone_Number__c</fullName>
    <label>Lender Card Phone Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>