unpackaged/main/default/objects/Lender_Profile__c/fields/Lender_Card_Term_Length_Max__c.field-meta.xml
<CustomField>
    <fullName>Lender_Card_Term_Length_Max__c</fullName>
    <inlineHelpText>Format this data exactly how you want it to appear on the lender card (Include "months" and surrounding text if desired)</inlineHelpText>
    <label>Lender Card Term Length Max</label>
    <length>25</length>
    <type>Text</type>
</CustomField>