unpackaged/main/default/objects/Lender_Profile__c/fields/Lender_Card_TIB_Min__c.field-meta.xml
<CustomField>
    <fullName>Lender_Card_TIB_Min__c</fullName>
    <inlineHelpText>Format this data exactly how you want it to appear on the lender card (Include "years" or "months" after the value)</inlineHelpText>
    <label>Lender Card TIB Min</label>
    <length>25</length>
    <type>Text</type>
</CustomField>