unpackaged/main/default/objects/Lender_Profile__c/fields/Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>Offer_Type__c</fullName>
    <description>This field is used by the UI to determine the color scheme of the lender card when there is match and is returned to the front end SBL-326</description>
    <label>Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Loan</fullName>
            </value>
            <value>
                <fullName>Working Capital Loan</fullName>
            </value>
            <value>
                <fullName>Term Loan</fullName>
            </value>
            <value>
                <fullName>SBA Loan</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Equipment Financing</fullName>
            </value>
            <value>
                <fullName>Equipment Leasing</fullName>
            </value>
            <value>
                <fullName>Merchant Cash Advance</fullName>
            </value>
            <value>
                <fullName>Line of Credit</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>