unpackaged/main/default/objects/Lender_Profile__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lender Profiles (Partner Account)</relationshipLabel>
    <relationshipName>Lender_Profile</relationshipName>
    <type>Lookup</type>
</CustomField>