unpackaged/main/default/objects/Lender_Profile__c/fields/Rank_Order__c.field-meta.xml
<CustomField>
    <fullName>Rank_Order__c</fullName>
    <inlineHelpText>Used to determine the order in which lenders are returned to a customer when multiple lenders are applicable to be presented</inlineHelpText>
    <label>Rank Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>