unpackaged/main/default/objects/Lender_Profile__c/fields/Request_Loan_Amount_Max__c.field-meta.xml
<CustomField>
    <fullName>Request_Loan_Amount_Max__c</fullName>
    <label>Request Loan Amount Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>