unpackaged/main/default/objects/Lender_Profile__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIGH</fullName>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
            </value>
            <value>
                <fullName>LOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>