unpackaged/main/default/objects/Lender_Profile__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>The start date that a lender profile should be considered for distribution</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>