unpackaged/main/default/objects/Lender_Profile__c/fields/TaxLiens__c.field-meta.xml
<CustomField>
    <fullName>TaxLiens__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Liens</label>
    <type>Checkbox</type>
</CustomField>