unpackaged/main/default/objects/Lender_Profile__c/fields/TIB_Max__c.field-meta.xml
<CustomField>
    <fullName>TIB_Max__c</fullName>
    <description>Time in Business</description>
    <inlineHelpText>In Months</inlineHelpText>
    <label>TIB Max</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>