unpackaged/main/default/objects/Lender_Profile__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title for users to provide additional context about a lender profile record. This field is not being used for service integrations</description>
    <inlineHelpText>Generic description of the Lender Profile for internal users</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>