unpackaged/main/default/objects/Lender_Profile__c/fields/Trustpilot_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Trustpilot_API_Key__c</fullName>
    <externalId>true</externalId>
    <label>Trustpilot API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>