unpackaged/main/default/objects/Lender_Profile__c/fields/Trustpilot_Review_URL__c.field-meta.xml
<CustomField>
    <fullName>Trustpilot_Review_URL__c</fullName>
    <label>Trustpilot Review URL</label>
    <type>Url</type>
</CustomField>