unpackaged/main/default/objects/Lender_Profile__c/recordTypes/Lender.recordType-meta.xml
<RecordType>
    <fullName>Lender</fullName>
    <active>true</active>
    <label>Lender</label>
    
    
    
    
</RecordType>